gcc/testsuite/g++.dg/modules/pmp-3.C
// { dg-additional-options -fmodules-ts }

int k;

module :private; // { dg-error "private module fragment" }
int i;
